<resources>
    <string name="app_name">Ticket</string>
    <string name="tutorial">Правила игры:</string>
    <string name="rules_of_the_game_t">Правила игры очнь простые. Быстро посчитай сумму первых и последних трёх цифр в билетике. Если суммы равны, то скорее нажимай на левую часть экрана.</string>
    <string name="rules_of_the_game_f">Если суммы не равны, то надо нажать на правую половину твоего телефона.</string>
    <string name="go">Приступим? :)</string>
    <string name="yes">Да!</string>
    <string name="continue_l">Продолжить</string>
    <string name="enter_nickname">Введите никнейм</string>
    <string name="hello">Привет!</string>
    <string name="message_success">Успешно!</string>
    <string name="message_error">Ошибка!</string>
    <string name="error_enter_the_name">Пожалуйста, введите никнейм</string>
    <string name="friend">Друг</string>
    <string name="toBegin">Начать</string>
    <string name="records">Рекорды</string>
    <string name="record">Рекорд: %1$d</string>
    <string name="points">Очки: %1$d</string>
    <string name="get_ready">Приготовься, игра начнется через: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no">Нет</string>
    <string name="yeah">Да</string>
    <string name="try_one_more_time">Попробовать ещё раз?</string>
    <string name="yours_result">Ваш результат: %1$d %2$s</string>
    <string name="exit_to_main_menu_q">Выйти в главное меню?</string>
    <string name="time_is_over">Время вышло</string>
    <string name="try_again_btn_text">Попробоавть ещё раз? Да!</string>
    <string name="zero">0</string>
    <string name="any_ticket_number">356741</string>
    <string name="point_o">очко</string>
    <string name="point_a">очка</string>
    <string name="point_ov">очков</string>
    <string name="start_over">Начать заново?</string>
    <string name="play_fair">Ай-ай-ай, играй честно :)</string>
    <string name="number">%1$d.</string>
    <string name="user_names">Имена пользователей</string>
    <string name="_10">10</string>
    <string name="change_name">Сменить имя</string>
    <string name="change">Изменить</string>
    <string name="digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZабвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ1234567890</string>
    <string name="tutorial_btn_text">Правила игры</string>
</resources>
