<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuFragment"
    android:orientation="vertical"
    android:background="@color/dark_grey">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_ticket"
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/spacing_outsize_50"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_username"
        android:text="@string/friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/baufra60.white"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowRadius="5"
        android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_let"
        android:text="@string/toBegin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:textColor="@drawable/menu_btn_colors"
        android:textAllCaps="false"
        android:fontFamily="@font/baufra_demibold"
        android:background="@drawable/custom_button_login"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_huge_32"
        android:layout_marginBottom="@dimen/spacing_normal_16"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_records"
        android:text="@string/records"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:textColor="@drawable/menu_btn_colors"
        android:textAllCaps="false"
        android:fontFamily="@font/baufra_demibold"
        android:background="@drawable/custom_button_login"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing_normal_16"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_name_changer"
        android:text="@string/change_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:textColor="@drawable/menu_btn_colors"
        android:textAllCaps="false"
        android:fontFamily="@font/baufra_demibold"
        android:background="@drawable/custom_button_login"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing_normal_16"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_tutorial"
        android:text="@string/tutorial_btn_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:textColor="@drawable/menu_btn_colors"
        android:textAllCaps="false"
        android:fontFamily="@font/baufra_demibold"
        android:background="@drawable/custom_button_login"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing_huge_32"/>

</LinearLayout>