<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuActivity"
    android:background="@drawable/login_background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_ticket"
        android:layout_height="175dp"
        android:layout_width="175dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/tv_username"/>

    <TextView
        android:id="@+id/tv_username"
        android:text="@string/friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/baufra60.white"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:shadowColor="@color/black"
        android:shadowRadius="5"
        android:layout_marginBottom="@dimen/spacing_huge_32"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_let"
        android:text="@string/toBegin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/baufra_demibold"
        android:background="@drawable/custom_button_login"
        android:layout_below="@id/tv_username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_normal_16"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_records"
        android:text="@string/records"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/baufra_demibold"
        android:background="@drawable/custom_button_login"
        android:layout_below="@id/btn_let"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_normal_16"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_name_changer"
        android:text="@string/change_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/baufra_demibold"
        android:background="@drawable/custom_button_login"
        android:layout_below="@id/btn_records"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>