<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/upper_part"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn_states"
            android:background="@android:color/transparent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginStart="@dimen/spacing_small_8"
            android:padding="@dimen/spacing_normal_16"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/retry_btn_states"
            android:background="@android:color/transparent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:padding="@dimen/spacing_normal_16"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_grey_35dp"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginEnd="@dimen/spacing_small_8"
            android:padding="@dimen/spacing_normal_16"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/center_part"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_small_8">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_top"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:src="@drawable/bus_ticket_top"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:cropToPadding="false"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bottom"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_top"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:src="@drawable/bus_ticket_bottom" />

        <TextView
            android:id="@+id/tv_gameTickets"
            android:text="@string/any_ticket_number"
            android:textColor="@color/very_dark_grey"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_top"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"/>

        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:layout_weight="1.4"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_gameTime"
            android:text="@string/zero"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            style="@style/foma40.red"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_tryAgain"
            android:text="@string/try_again_btn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:visibility="gone"
            style="@style/foma25.red"/>

        <TextView
            android:id="@+id/tv_points"
            android:text="@string/points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/transparent"
            style="@style/medium22.dark_gray"/>

        <TextView
            android:id="@+id/tv_record"
            android:text="@string/record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/medium22.dark_gray"/>

    </LinearLayout>

</LinearLayout>