<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/upper_part"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_grey_35dp"
            android:background="@drawable/r_btn_text_colors"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginStart="@dimen/spacing_small_8"
            android:padding="@dimen/spacing_small_8"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_retry_grey_35dp"
            android:background="@drawable/r_btn_text_colors"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:padding="@dimen/spacing_small_8"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_grey_35dp"
            android:background="@drawable/r_btn_text_colors"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginEnd="@dimen/spacing_small_8"
            android:padding="@dimen/spacing_small_8"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/center_part"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_small_8">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_top"
            android:layout_width="258dp"
            android:layout_height="154dp"
            android:src="@drawable/bus_ticket_top"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:cropToPadding="false"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bottom"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_top"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:src="@drawable/bus_ticket_bottom" />

        <TextView
            android:id="@+id/tv_gameTickets"
            android:text="@string/any_ticket_number"
            android:textColor="@color/very_dark_grey"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_top"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent" />

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_weight="1.4"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tv_gameTime"
            android:text="@string/zero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/foma50.red"
            android:layout_above="@+id/tv_points"/>

        <TextView
            android:id="@+id/tv_points"
            android:text="@string/points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_record"
            android:gravity="center"
            style="@style/medium30.darkGray"/>

        <TextView
            android:id="@+id/tv_record"
            android:text="@string/record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingBottom="@dimen/spacing_small_8"
            style="@style/medium30.darkGray"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_tryAgain"
            android:text="@string/try_again_btn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:visibility="gone"
            android:layout_above="@+id/tv_points"
            style="@style/foma25.red"/>

    </RelativeLayout>

</LinearLayout>